correctif modal thomas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1 {
     font-weight: bold;
 }
 
-button {
+#presentation button {
     background-color: #887c0f;
     color: white;
     border-radius: 10px;
