--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@ h1 {
     }
     .networkButton {
         height: 60px;
+        margin: 0 20px 0 20px;
     }
     /* Menu + footer (end) */
 }
