--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,20 +36,17 @@ h1 {
 }
 
 .networkButton {
-    width: 10%;
     margin-bottom: 0;
 }
 
 .productListe {
     text-align: center;
-    margin-bottom: 40px;
 }
-
 
 /* Menu + footer (end) */
 
 #contentPage {
-    background-image: url("../img/fondGold.jpg");
+    background-image: url("../img/backgroundBillets.jpg");
 }
 #productsLists, #presentation, #presentationTextList {
     display: none;
@@ -158,7 +155,9 @@ h1 {
     }
     .networkButton {
         height: 60px;
-        margin: 0 20px 0 20px;
+    }
+    #Accueil img {
+        margin-top: 60px;
     }
     /* Menu + footer (end) */
 }
